--- a/AddressBook/src/main/resources/application.properties
+++ b/AddressBook/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=AddressBook
-spring.datasource.url=jdbc:mysql://localhost:3306/address_book
-spring.datasource.username=uday
-spring.datasource.password=Uday@2003
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/address_book
+spring.datasource.username=root
+spring.datasource.password=Uday@2003
