--- a/AddressBook/src/main/resources/application.properties
+++ b/AddressBook/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=AddressBook
 
-
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/address_book
 spring.datasource.username=root
 spring.datasource.password=Uday@2003
+
+
+
+
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
